--- a/.eslintrc
+++ b/.eslintrc
@@ -3,16 +3,16 @@
   "extends": [
     "airbnb-base",
     "next/core-web-vitals", // Needed to avoid warning in next.js build: 'The Next.js plugin was not detected in your ESLint configuration'
-    "plugin:prettier/recommended",
+    "plugin:prettier/recommended"
   ],
   "rules": {
     "prettier/prettier": [
       "error",
       {
         "singleQuote": true,
-        "endOfLine": "auto",
-      },
-    ],
+        "endOfLine": "auto"
+      }
+    ]
   },
   "overrides": [
     // Configuration for TypeScript files
@@ -22,24 +22,24 @@
         "@typescript-eslint",
         "unused-imports",
         "tailwindcss",
-        "simple-import-sort",
+        "simple-import-sort"
       ],
       "extends": [
         "plugin:tailwindcss/recommended",
         "airbnb-typescript",
         "next/core-web-vitals",
-        "plugin:prettier/recommended",
+        "plugin:prettier/recommended"
       ],
       "parserOptions": {
-        "project": "./tsconfig.json",
+        "project": "./tsconfig.json"
       },
       "rules": {
         "prettier/prettier": [
           "error",
           {
             "singleQuote": true,
-            "endOfLine": "auto",
-          },
+            "endOfLine": "auto"
+          }
         ],
         "react/destructuring-assignment": "off", // Vscode doesn't support automatically destructuring, it's a pain to add a new variable
         "react/require-default-props": "off", // Allow non-defined react props as undefined
@@ -53,7 +53,7 @@
           "error",
           "ForInStatement",
           "LabeledStatement",
-          "WithStatement",
+          "WithStatement"
         ], // Overrides Airbnb configuration and enable no-restricted-syntax
         "import/prefer-default-export": "off", // Named export is easier to refactor automatically
         "tailwindcss/no-custom-classname": "off", // Disabled otherwise nightmare to allow each custom tailwind classes
@@ -63,17 +63,9 @@
         "unused-imports/no-unused-imports": "error",
         "unused-imports/no-unused-vars": [
           "error",
-          { "argsIgnorePattern": "^_" },
-        ],
-      },
-    },
-  ],
-  "server": {
-    // Allow the server to be accessible from other devices on the network
-    // You may need to replace '0.0.0.0' with your actual network interface IP
-    // or 'localhost' depending on your network setup
-    "host": "0.0.0.0",
-    // Specify the port number you want the server to listen on
-    "port": 3000,
-  },
+          { "argsIgnorePattern": "^_" }
+        ]
+      }
+    }
+  ]
 }
