--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material-tailwind/html": "^2.2.2",
     "@material-tailwind/react": "^2.1.9",
     "classnames": "^2.5.1",
+    "framer-motion": "^11.1.7",
     "next": "^14.1.0",
     "next-seo": "^6.4.0",
     "react": "^18.2.0",
@@ -58,8 +59,7 @@
     "prettier": "^3.2.4",
     "rimraf": "^5.0.5",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
-    "video.js": "^8.12.0"
+    "typescript": "^5.3.3"
   },
   "license": "ISC"
 }
