--- a/.eslintrc
+++ b/.eslintrc
@@ -40,6 +40,7 @@
             "endOfLine": "auto",
           },
         ],
+        "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-var-requires": "off",
         "react/destructuring-assignment": "off",
         "react/require-default-props": "off",
