--- a/package.json
+++ b/package.json
@@ -16,19 +16,28 @@
   "dependencies": {
     "@material-tailwind/html": "^2.2.2",
     "@material-tailwind/react": "^2.1.9",
+    "@nextui-org/react": "^2.3.6",
+    "@react-stately/data": "^3.11.3",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@types/react-youtube": "^7.10.0",
     "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.1.7",
     "next": "^14.1.0",
     "next-seo": "^6.4.0",
     "react": "^18.2.0",
+    "react-autosuggest": "^10.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-player": "^2.16.0",
     "react-slick": "^0.30.2",
+    "react-youtube": "^10.1.0",
+    "sharp": "^0.33.3",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.10",
     "styled-jsx-plugin-postcss": "^4.0.1",
-    "swiper": "^11.1.1"
+    "swiper": "^11.1.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.1.0",
